--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>DESI Zoom Z-Slider Player</h1>
   <input type="range" id="zSlider" min="0" max="49" value="0">
-  <img id="viewer" src="frames/frame_000.jpg" alt="Z slice" width="100%">
+  <img id="viewer" src="frames/frame0000.jpg" alt="Z slice" width="100%">
   
   <script src="player.js"></script>
 </body>
