--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>DESI Zoom Z-Slider Player</title>
+  <title>DESI Z-Slider Player</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>DESI Zoom Z-Slider Player</h1>
+  <h1>DESI Z-Slider Player</h1>
   <input type="range" id="zSlider" min="0" max="600" value="0">
   <img id="viewer" src="frames/frame0001.jpg" alt="Z slice" width="100%">
   
