--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>DESI Z-Slider Player</h1>
+  <p>DESI Collaboration/DOE/KPNO/NOIRLab/NSF/AURA/R. Proctor</p>
   <input type="range" id="zSlider" min="0" max="600" value="0">
   <img id="viewer" src="frames/frame0001.jpg" alt="Z slice" width="100%">
   
