--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>DESI Z-Slider Player</title>
+  <title>DESI Z-Slider Demo</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>DESI Z-Slider Player</h1>
-  <p>DESI Collaboration/DOE/KPNO/NOIRLab/NSF/AURA/R. Proctor</p>
+  <h1>DESI Z-Slider Demo</h1>
   <input type="range" id="zSlider" min="0" max="600" value="0">
   <img id="viewer" src="frames/frame0001.jpg" alt="Z slice" width="100%">
-  
   <script src="player.js"></script>
+  <p>DESI Collaboration/DOE/KPNO/NOIRLab/NSF/AURA/R. Proctor</p>
+
 </body>
 </html>
