--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <h1>DESI Z-Slider Demo</h1>
   <img id="viewer" src="frames/frame0001.jpg" alt="Z slice" width="100%">
   <input type="range" id="zSlider" min="0" max="600" value="0">
+  <br>
+  <button id="playPause">▶️ Play</button>
+
   <script src="player.js"></script>
   <p>DESI Collaboration/DOE/KPNO/NOIRLab/NSF/AURA/R. Proctor</p>
 
